--- a/generalstyling.css
+++ b/generalstyling.css
@@ -1,7 +1,7 @@
-
 nav ul li a {
   font-size: 16px !important;
 }
+
 @media (max-width: 920px) {
   nav {
     padding: 0 25px !important;
@@ -33,7 +33,7 @@ nav ul li a {
     align-items: stretch !important;
     padding: 0 !important;
     transform: translateY(-100%) !important;
-    transition: transform 0.45s ease-in-out !important;
+    transition: transform 0.25s ease-in-out !important;
     z-index: 1000 !important;
     overflow: hidden !important; /* Prevent scrolling */
   }
@@ -41,8 +41,6 @@ nav ul li a {
   /* Slide down when opened */
   #click:checked ~ ul {
     transform: translateY(0) !important;
-    transition: transform 0.25s ease-in-out !important;
-
   }
 
   /* Header inside dropdown (logo + close button) */
@@ -53,10 +51,13 @@ nav ul li a {
     padding: 25px 30px !important;
     width: 100% !important;
   }
-            nav ul li a {
-                opacity: 0; /* Start with hidden links */
-  transform: none !important; /* Start off-screen */
-  transition: none!important; /* Transition effects */
+
+  nav ul li a {
+    opacity: 0;
+    transform: none !important;
+    transition: none !important;
+  }
+
   nav ul .menu-logo {
     width: 45px !important;
     filter: brightness(0) saturate(100%) invert(100%) !important;
@@ -74,8 +75,7 @@ nav ul li a {
     padding: 18px 30px !important;
     list-style: none !important;
     margin: 0 !important;
-    width: auto!important;
-    top: 60px !important;
+    width: 100% !important;
   }
 
   nav ul li a {
@@ -134,4 +134,5 @@ nav ul li a {
 @media (min-width: 1000px) {
   nav ul .cta-btn {
     display: none;
-  }}}
+  }
+}
