--- a/generalstyling.css
+++ b/generalstyling.css
@@ -106,6 +106,14 @@ nav ul li a {
     color: #aaa !important;
   }
 
+  .icon-box p {
+    font-size: 0.9rem;
+}
+.why-choose-us .intro-text {
+    font-size: 0.9rem;
+    text-align: left;
+}
+
   /* CTA button at bottom */
   nav ul .cta-btn {
     margin: auto 30px 40px 30px !important;
@@ -137,6 +145,9 @@ nav ul li a {
   nav ul .cta-btn {
     display: none;
   }
+  .cta-container h2 {
+    text-align: center;
+}
 }
 
 
