--- a/generalstyling.css
+++ b/generalstyling.css
@@ -82,13 +82,14 @@ nav ul li a {
 
   nav ul li a {
     color: #fff !important;
-    font-size: 13px !important;
+    font-size: 14px !important;
     font-weight: 500 !important;
     letter-spacing: 1px !important;
     text-transform: uppercase !important;
     text-decoration: none !important;
-    display: flex !important:-between !important;
+    display: flex !important;
     align-items: center !important;
+    justify-content: space-between!important;
   }
 
   nav ul li a::after {
@@ -161,8 +162,8 @@ html {
             position: fixed;
             bottom: 40px;
             right: 40px;
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 80px;
             background: #000;
             border-radius: 50%;
             display: flex;
